examples/negative/protocols/impl_missing_required_method.kai
# Negative fixture (#535 / protocols): `impl P for Box` provides
# only one of the two methods `P` requires (`foo` is provided,
# `bar` is omitted). The pre-typer impl validator rejects the
# block before the dispatcher stub becomes a runtime hole.

protocol P {
  foo(x: Self) : Int
  bar(x: Self) : Int
}

type Box = Box(Int)

impl P for Box {
  fn foo(b: Box) : Int = match b { Box(n) -> n }
}

fn main() : Int = foo(Box(1))
